# crewAi

ai_researcher/: README.md  pyproject.toml
ai_researcher/knowledge/: user_preference.txt
ai_researcher/src/ai_researcher/: abc.php  crew.py  index.html  index.js
