[project]
name = "ai_researcher"
version = "0.1.0"
description = "AI_researcher using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.4"
]

[project.scripts]
ai_researcher = "ai_researcher.main:run"
run_crew = "ai_researcher.main:run"
train = "ai_researcher.main:train"
replay = "ai_researcher.main:replay"
test = "ai_researcher.main:test"
run_with_trigger = "ai_researcher.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
